# fabric-verification

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
.github/workflows/: cmake.yml  python-tests.yml
firmware/include/: firmware.h  rtos.h
firmware/src/: firmware.c  firmware_asm.S  rtos.c
sim/testbench/: fault_injector.py
sim/tlm/: fabric_tlm.cpp  fabric_tlm.hpp
